...

        let text = correctAnswers == questionsAmount
            ? "Поздравляем, вы ответили на \(correctAnswers) из \(questionsAmount)!"
            : "Вы ответили на \(correctAnswers) из \(questionsAmount), попробуйте ещё раз!"

        let viewModel = QuizResultsViewModel(
            title: "Этот раунд окончен!",
            text: text,
            buttonText: "Сыграть ещё раз"
        )

        viewController?.show(quiz: viewModel)
    }

    
...
